--- a/environment.yml
+++ b/environment.yml
@@ -19,4 +19,4 @@ dependencies:
     # Deep learning
     - tensorflow=2.6.0
     # Computer Vision
-    - opencv-python
+    - opencv-contrib-python
